Fixed a bug where screen was not showing

--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@
   position: absolute;
 }
 
+/*
 canvas {
-	//display: block;
+	display: block;
 	position: absolute;
 	margin: auto;
 	top: 0;
@@ -14,3 +15,4 @@ canvas {
 	left: 0;
 	right: 0;
 }
+*/
